[tool.poetry]
name = "nn"
version = "0.1.0"
description = ""
authors = ["Tim Richardson <tim.richardson@genomicsengland.co.uk>"]
readme = "README.md"
packages = [{ include = "nn" }]

[tool.poetry.scripts]
nn = "nn.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-xdist = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
